# polishCalculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Math.cpp  Math.hpp  Parser.cpp  main.cpp  script.sh
calculator/: CMakeLists.txt  Calculator.hpp
calculator/math/: CMakeLists.txt  Math.cpp  Math.hpp
calculator/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
calculator/stringRecognizer/: CMakeLists.txt  StringRecognizer.cpp  StringRecognizer.hpp  clear.sh  script.sh
test/: CMakeLists.txt  project_test.cc
tests/: CMakeLists.txt  Test_Calculator.cpp  Test_Math.cpp  Test_Parser.cpp
